# test_task_7

app/: .default.env  pyproject.toml  run.py
app/alembic/: env.py
app/alembic/versions/: 7b08d6d37ff1_init.py  e41f1bd21b17_create_tables.py
app/src/: main.py  settings.py  setup.py
app/src/application/: base_article_repository.py  errors.py  parser_service.py
app/src/application/parsers/: wiki_parser.py
app/src/domain/: article.py  base_parser_service.py  base_url_parser.py
app/src/infrastructure/db/: article_repository.py  base.py  connection.py  models.py
app/src/ioc/: adapters.py  registry.py  repositories.py  services.py  settings.py  utils.py
app/src/presentation/: root_router.py
app/src/presentation/article/: article_router.py
